--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=Api Gateway
+spring.application.name=api-gateway
+server.port=8081
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
