--- a/config-server/src/main/resources/config/user-service.properties
+++ b/config-server/src/main/resources/config/user-service.properties
@@ -1,21 +1,25 @@
-spring.application.name=demo
+spring.application.name=user-service
 
-# The port that the server should run on
-server.port=8081
+server.port=3001
 
-spring.datasource.url=jdbc:mysql://localhost:6000/product_service?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/real_estate?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=1
+spring.datasource.password=dinhtrung
 spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#Multipart file
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=3MB
+
+#JPA
 spring.jpa.show-sql=true
 spring.data.jpa.repositories.enabled=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
 
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#Security
+#spring.security.user.name=admin
+#spring.security.user.password=password
