--- a/config-server/src/main/resources/config/user-service.properties
+++ b/config-server/src/main/resources/config/user-service.properties
@@ -4,7 +4,7 @@ server.port=3001
 
 spring.datasource.url=jdbc:mysql://localhost:3306/real_estate?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=dinhtrung
+spring.datasource.password=1
 spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
