--- a/property-service/src/main/resources/application.properties
+++ b/property-service/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.application.name=user-service
+spring.application.name=property-service
 spring.config.import=optional:configserver:http://localhost:9876
