--- a/config-server/src/main/resources/config/property-service.properties
+++ b/config-server/src/main/resources/config/property-service.properties
@@ -2,9 +2,9 @@ spring.application.name=property-service
 
     server.port=3002
 
-spring.datasource.url=jdbc:mysql://localhost:3306/real_estate?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:33061/property_app_mysql?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=1
+spring.datasource.password=12345678
 spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
