--- a/config-server/src/main/resources/config/user-service.properties
+++ b/config-server/src/main/resources/config/user-service.properties
@@ -16,7 +16,7 @@ spring.servlet.multipart.max-file-size=3MB
 spring.jpa.show-sql=true
 spring.data.jpa.repositories.enabled=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
 
