--- a/config-server/src/main/resources/config/user-service.properties
+++ b/config-server/src/main/resources/config/user-service.properties
@@ -2,9 +2,9 @@ spring.application.name=user-service
 
 server.port=3001
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user_app_mysql?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:33062/user_app_mysql?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=dinhtrung
+spring.datasource.password=12345678
 spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
