--- a/user-service/.gitignore
+++ b/user-service/.gitignore
@@ -31,3 +31,11 @@ build/
 
 ### VS Code ###
 .vscode/
+
+.DS_Store
+.idea/.DS_Store
+core/.DS_Store
+property-service/.DS_Store
+property-service/src/.DS_Store
+user-service/.DS_Store
+user-service/src/.DS_Store
