--- a/config-server/src/main/resources/config/property-service.properties
+++ b/config-server/src/main/resources/config/property-service.properties
@@ -23,3 +23,8 @@ spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql
 #Security
 #spring.security.user.name=admin
 #spring.security.user.password=password
+
+spring.rabbitmq.host= localhost
+spring.rabbitmq.port= 5672
+spring.rabbitmq.username= user
+spring.rabbitmq.password= password
